--- a/pyApp/templates/base.html
+++ b/pyApp/templates/base.html
@@ -6,7 +6,12 @@
     {% block head %}{% endblock %}
 </head>
 <body>
-    {% block body %}{% endblock %}
-    <div id="maindiv"></div>
+{% block body %}{% endblock %}
+<div id="maindiv"></div>
 </body>
+
+<footer>
+    {% block footer %}{% endblock %}
+    <p>Author: Joshua Alsop-Barrell</p><br>
+</footer>
 </html>
