--- a/pyApp/templates/stock.html
+++ b/pyApp/templates/stock.html
@@ -38,11 +38,11 @@
         <option value="ZM">Zoom</option>
     </select><br><br>
     <label for="stock">Choose a time period:</label>
-    <select id="per" name="stock" size="1">
-        <option value="day">Day</option>
-        <option value="week">Week</option>
-        <option value="month">Month</option>
-        <option value="quarter">Quarter</option>
+    <select id="per" name="per" size="1">
+        <option value=1>Day</option>
+        <option value=7>Week</option>
+        <option value=30>Month</option>
+        <option value=90>Quarter</option>
     </select><br><br>
     <button class="button" style="vertical-align:middle"><span>Submit </span></button>
 </form>
