--- a/pyApp/templates/base.html
+++ b/pyApp/templates/base.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+{% block head %}{% endblock %}
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">
-    {% block head %}{% endblock %}
 </head>
+
+
 <body>
+<div class="content">
 {% block body %}{% endblock %}
-<div id="maindiv"></div>
+
+
+</div>
+
+
+<footer class="footer">
+    {% block footer %}{% endblock %}
+    <p>Author: Joshua Alsop-Barrell</p>
+    <p>Loading times may take a while, please be patient.</p>
+</footer>
 </body>
 
-<footer>
-    {% block footer %}{% endblock %}
-    <p>Author: Joshua Alsop-Barrell</p><br>
-</footer>
 </html>
