--- a/pyApp/templates/profitshow.html
+++ b/pyApp/templates/profitshow.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block body %}
+
 <ul class="horizontal">
     <li><a href="stock">Home</a></li>
     <li><a class="active" href="profit">Profit</a></li>
@@ -27,7 +28,7 @@
 
 <br><br><br><br>
 <h2>Stocks That Achieve the Requested Profit</h2>
-<table>
+<table class="stocks">
     <tr>
         <th>Stock Name</th>
         <th>Profit</th>
@@ -42,7 +43,7 @@
 
 <br><br><br><br>
 <h2>Stocks That Did Not Achieve the Requested Profit</h2>
-<table>
+<table class="stocks">
     <tr>
         <th>Stock Name</th>
         <th>Profit</th>
@@ -54,8 +55,5 @@
     </tr>
     {% endfor %}
 </table>
-
-</body>
-</html>
 
 {% endblock %}
