--- a/pyApp/templates/profit.html
+++ b/pyApp/templates/profit.html
@@ -18,7 +18,7 @@
     <input type="number" id="profit" name="profit" min="1" max="500" required><br><br>
     <label for="per">Choose a time period:</label>
     <select id="per" name="per" size="1" required>
-        <option selected disabled>Choose a time period</option>
+        <option selected disabled value="">Choose a time period</option>
         <option value=1>Day</option>
         <option value=7>Week</option>
         <option value=30>Month</option>
